--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~8.2.9",
     "@angular/platform-browser-dynamic": "~8.2.9",
     "@angular/router": "~8.2.9",
+    "primeflex": "^2.0.0-rc.1",
     "primeicons": "^4.0.0",
     "primeng": "^9.1.3",
     "rxjs": "~6.4.0",
