--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,22 +12,25 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^8.2.14",
-    "@angular/cdk": "^10.0.2",
+    "@angular/cdk": "~8.2.3",
     "@angular/common": "~8.2.9",
     "@angular/compiler": "~8.2.9",
     "@angular/core": "~8.2.9",
     "@angular/fire": "^5.4.2",
     "@angular/forms": "~8.2.9",
+    "@angular/material": "~8.2.3",
     "@angular/platform-browser": "~8.2.9",
     "@angular/platform-browser-dynamic": "~8.2.9",
     "@angular/router": "~8.2.9",
+    "angular-font-awesome": "^3.1.2",
+    "firebase": ">= 5.5.7 <8",
+    "font-awesome": "^4.7.0",
     "primeflex": "^2.0.0-rc.1",
     "primeicons": "^4.0.0",
     "primeng": "^9.1.3",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
-    "zone.js": "~0.9.1",
-    "firebase": ">= 5.5.7 <8"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.8",
