--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,7 +28,7 @@
     "primeflex": "^2.0.0-rc.1",
     "primeicons": "^4.0.0",
     "primeng": "^9.1.3",
-    "rxjs": "~6.4.0",
+    "rxjs": "^6.5.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
