--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "~8.2.9",
     "@angular/router": "~8.2.9",
     "angular-font-awesome": "^3.1.2",
+    "bson-objectid": "^1.3.1",
     "firebase": ">= 5.5.7 <8",
     "font-awesome": "^4.7.0",
     "primeflex": "^2.0.0-rc.1",
